welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:1: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono:1: error: expected start of definition
override def run() {
         ^PictureMono:6: error: expected class or object definition
def faireV(){for (x <- 1 to 2) {baisseBrosse();leveBrosse(); avance(); gauche(); avance()} 
^